# mcsolutions

./: .gitignore  README.md  mcsolutions.cabal
src/: MonadChallenges.hs  Set1.hs  Set2.hs  Set3.hs
src/MonadChallenges/: Set1.hs  Set4.hs
src/exercises/: MonadChallenges.hs  Set1.hs  Set2.hs  Set4.hs
