name:                mcsolutions
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Stallmanifold
maintainer:          stallmanifold@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     MCPrelude
                       MonadChallenges.Set1
                       MonadChallenges.Set2
                       MonadChallenges.Set3
                       MonadChallenges.Set4
  -- other-modules:       
  other-extensions:    MonadComprehensions, RebindableSyntax, Trustworthy, CPP, NoImplicitPrelude, BangPatterns
  build-depends:       base >=4 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010